﻿shmuel 03.09.2014 16:13:53 +0200 - build 426

1. Продолжение 425.

shmuel 03.09.2014 01:25:51 +0200 - build 425

1. M#2705: Far.GetConfig (на замену Far.Cfg_Get).

shmuel 01.09.2014 23:48:28 +0200 - build 424

1. M#2724: LuaFAR: MIF_SELECTED для far.Menu.

shmuel 28.08.2014 21:36:52 +0200 - build 423

1. 'MacroPath' в luamacro.ini должно быть внутри секции [General].

shmuel 27.08.2014 21:22:51 +0200 - build 422

1. LuaFAR: продолжение 419.2.

shmuel 27.08.2014 00:29:48 +0200 - build 421

1. Уточнение 420.

shmuel 26.08.2014 23:15:21 +0200 - build 420

1. macro:load поддерживает явное указание путей, с которых будут грузиться макрофайлы.

shmuel 26.08.2014 21:16:27 +0200 - build 419

1. MCTL_LOADALL поддерживает явное указание путей, с которых будут грузиться макрофайлы.

2. LuaFAR: far.MacroLoadAll поддерживает явное указание путей, с которых будут грузиться макрофайлы.

shmuel 25.08.2014 20:23:55 +0200 - build 418

1. Мелкий рефакторинг.

shmuel 24.08.2014 11:37:48 +0200 - build 417

1. Уточнение 414.

shmuel 23.08.2014 09:43:48 +0200 - build 416

1. Уточнение 414.

shmuel 23.08.2014 03:11:07 +0200 - build 415

1. Поддержка UTF-8 BOM в luamacro.ini.

shmuel 23.08.2014 02:13:33 +0200 - build 414

1. M#2469: Общие макросы.
   Добавлен файл luamacro.example.ini, активируется при его переименовании в luamacro.ini.
   В нём может быть установлено значение `MacroPath`, указывающее, с каких путей будут загружаться
   стационарные макрофайлы. Значение по умолчанию: %FARPROFILE%\Macros\scripts.

shmuel 23.08.2014 00:31:33 +0200 - build 413

1. mf.usermenu: режим "синхронного вызова" был сломан (в билде Far 3.0.3914).

shmuel 20.08.2014 12:25:13 +0200 - build 412

1. Упрощение вызова макробраузера, ставшее возможным благодаря изменениям в Far 3.0.4059.

shmuel 15.08.2014 19:20:35 +0200 - build 411

1. `eval(S,2)` возвращает `-3`, если было выведено меню выбора макроса, и это меню было отменено пользователем.

shmuel 14.08.2014 23:55:27 +0200 - build 410
